ajuste de alguns css, adicionado prettier e vscode settings

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,9 @@
 {
-    "recommendations": [
-        "bierner.markdown-footnotes"
-    ]
+	"recommendations": [
+		"dbaeumer.vscode-eslint",
+		"esbenp.prettier-vscode",
+		"gruntfuggly.todo-tree",
+		"esbenp.prettier-vscode",
+		"antfu.vite"
+	]
 }
