--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ collections:
 # Site Settings
 locale: 'pt-BR'
 rtl: # true, false (default) # turns direction of the page into right to left for RTL languages
-title: 'JeanCarloEM'
+title: ''
 title_separator: '-'
 subtitle: # site tagline that appears below site title in masthead
 name: 'Jean Carlo EM'
@@ -32,7 +32,7 @@ url: 'https://www.jeancarloem.com ' # the base hostname & protocol for your site
 baseurl: '/' # the subpath of your site, e.g. "/blog"
 repository: 'sitiojeancarloem/blog' # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo: 'https://www.jeancarloem.com/assets/img/logo/logo-animado2.gif' # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo: 'https://jcem.pro/logo/logo-animado.gif' # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title: '' # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs: # true, false (default)
 words_per_minute: 200
