--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,41 @@
-name: Build and Deploy Jekyll
+name: Build and Deploy Jekyll (live)
 
 on:
   push:
     branches:
-      - main # Execute em todo push para a branch 'main'
-  workflow_dispatch: # Permite a execução manual na aba Actions
+      - live # Executa apenas quando há push no branch 'live'
+  workflow_dispatch: # Permite execução manual (Actions > Run workflow)
 
 jobs:
   jekyll:
+    if: github.ref == 'refs/heads/live' # Segurança extra
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout código
         uses: actions/checkout@v4
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1' # Use uma versão de Ruby suportada
-          bundler-cache: true # Instala dependências do Gemfile
+          ruby-version: '3.1'
+          bundler-cache: true # Instala dependências do Gemfile automaticamente
 
       - name: Build Jekyll site
         run: bundle exec jekyll build
 
-      - name: Upload artifact
+      - name: Upload build artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./_site
 
   deploy:
+    if: github.ref == 'refs/heads/live'
+    runs-on: ubuntu-latest
+    needs: jekyll
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: jekyll
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
