--- a/_config.yml
+++ b/_config.yml
@@ -135,10 +135,10 @@ author:
       url: 'https://x.com/jeancarloem'
     - label: 'Facebook'
       icon: 'fab fa-fw fa-facebook-square'
-      # url: "https://facebook.com/"
+      url: 'https://www.facebook.com/JeanCarloEM/'
     - label: 'GitHub'
       icon: 'fab fa-fw fa-github'
-      url: 'https://github.com/https://github.com/jeanCarloEM'
+      url: 'https://github.com/jeanCarloEM'
     - label: 'Instagram'
       icon: 'fab fa-fw fa-instagram'
       url: 'https://www.instagram.com/jeancarlo.em/'
@@ -148,22 +148,22 @@ footer:
   links:
     - label: 'Twitter'
       icon: 'fab fa-fw fa-twitter-square'
-      # url:
+      url: 'https://x.com/jeancarloem'
     - label: 'Facebook'
       icon: 'fab fa-fw fa-facebook-square'
-      # url:
+      url: 'https://www.facebook.com/JeanCarloEM/'
     - label: 'GitHub'
       icon: 'fab fa-fw fa-github'
       url: 'https://github.com/jeanCarloEM'
     - label: 'GitLab'
       icon: 'fab fa-fw fa-gitlab'
-      # url:
+      #url:
     - label: 'Bitbucket'
       icon: 'fab fa-fw fa-bitbucket'
       # url:
     - label: 'Instagram'
       icon: 'fab fa-fw fa-instagram'
-      # url:
+      url: 'https://www.instagram.com/jeancarlo.em/'
   since: '2014'
 
 # Reading Files
